--- a/package.json
+++ b/package.json
@@ -4,25 +4,71 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "clean": "rm -rf dist",
+    "spit-graphql-schema": "bin/fetch-schema.sh",
+    "generate-all-types": "graphql-codegen --config codegen.ts",
+    "dev:generate-all-types": "graphql-codegen --config codegen.ts --watch",
+    "dev:vite": "vite",
+    "dev:netlify-server": "netlify dev",
+    "watch": "run-p dev:*",
+    "dev": "run-s clean spit-graphql-schema generate-all-types watch",
+    "build": "tsc && bun spit-graphql-schema && bun generate-all-types && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/joy": "^5.0.0-beta.29",
+    "@nhost/react": "^3.1.0",
+    "@tanstack/react-router": "^1.16.6",
+    "ag-grid-community": "^31.1.1",
+    "ag-grid-react": "^31.1.1",
+    "axios": "^1.6.7",
+    "graphql": "^16.8.1",
+    "idb-keyval": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "remeda": "^1.44.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^5.0.2",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.2.2",
+    "@graphql-codegen/introspection": "^4.0.2",
+    "@playwright/test": "^1.41.2",
+    "@tanstack/router-devtools": "^1.16.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "codegen": "^0.1.0",
     "eslint": "^8.45.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-functional": "^4.4.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "graphql-codegen-typescript-validation-schema": "^0.12.1",
+    "graphql-inspector": "^0.5.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^4.4.5",
+    "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-restart": "^0.3.1",
+    "vitest": "^1.2.2"
   }
 }
