--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.2",
     "@graphql-codegen/introspection": "^4.0.2",
+    "@parcel/watcher": "^2.4.1",
     "@playwright/test": "^1.41.2",
     "@tanstack/router-devtools": "^1.16.6",
     "@types/react": "^18.2.15",
@@ -47,7 +48,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "codegen": "^0.1.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
