--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_NHOST_REGION = "eu-central-1"
 VITE_NHOST_SUBDOMAIN = "cgjgnshvokexivmuttxh"
 VITE_HASURA_ENDPOINT = "https://cgjgnshvokexivmuttxh.hasura.eu-central-1.nhost.run/v1/graphql"
+HASURA_ADMIN_SECRET = "X!k^AGS#6MRzyGGbLl&B0ZR74xY2FA*l"
