--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adms-admin",
+  "name": "adms-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,24 +13,30 @@
     "watch": "run-p dev:*",
     "dev": "run-s clean spit-graphql-schema generate-all-types watch",
     "build": "tsc && bun spit-graphql-schema && bun generate-all-types && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier \"src/**/*.{ts,tsx,js,jsx,css,scss}\" --write",
+    "test": "vitest"
   },
   "dependencies": {
-    "@mui/joy": "^5.0.0-beta.29",
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
     "@nhost/react": "^3.1.0",
-    "@tanstack/react-router": "^1.16.6",
+    "@mui/joy": "^5.0.0-beta.29",
     "ag-grid-community": "^31.1.1",
     "ag-grid-react": "^31.1.1",
+    "@tanstack/react-router": "^1.16.6",
     "axios": "^1.6.7",
-    "graphql": "^16.8.1",
+    "classnames": "^2.3.2",
+    "graphql": "^16.6.0",
     "idb-keyval": "^6.2.0",
+    "jotai": "^2.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "remeda": "^1.44.1",
+    "remeda": "^1.44.0",
+    "uuid": "^9.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -38,15 +44,16 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.2",
     "@graphql-codegen/introspection": "^4.0.2",
-    "@parcel/watcher": "^2.4.1",
+    "@parcel/watcher": "^2.4.0",
     "@playwright/test": "^1.41.2",
     "@tanstack/router-devtools": "^1.16.6",
-    "@types/react": "^18.2.15",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.14",
     "codegen": "^0.1.0",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -63,12 +70,14 @@
     "graphql-codegen-typescript-validation-schema": "^0.12.1",
     "graphql-inspector": "^0.5.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.2.2",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vite": "^4.4.5",
-    "vite-plugin-checker": "^0.6.4",
+    "vite": "^5.1.1",
+    "vite-plugin-checker": "^0.6.0",
     "vite-plugin-restart": "^0.3.1",
     "vitest": "^1.2.2"
   }
