--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.4",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@nhost/react": "^3.1.0",
     "@mui/joy": "^5.0.0-beta.29",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "ag-grid-community": "^31.1.1",
     "ag-grid-react": "^31.1.1",
     "@tanstack/react-router": "^1.16.6",
@@ -44,6 +47,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.2",
     "@graphql-codegen/introspection": "^4.0.2",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^3.0.0",
     "@parcel/watcher": "^2.4.0",
     "@playwright/test": "^1.41.2",
     "@tanstack/router-devtools": "^1.16.6",
