--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
-    "@headlessui/react": "^1.7.16",
-    "@heroicons/react": "^2.0.18",
-    "@nhost/react": "^3.1.0",
-    "@mui/joy": "^5.0.0-beta.29",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
+    "@mui/joy": "^5.0.0-beta.29",
+    "@nhost/react": "^3.1.0",
+    "@tanstack/react-router": "^1.16.6",
     "ag-grid-community": "^31.1.1",
     "ag-grid-react": "^31.1.1",
-    "@tanstack/react-router": "^1.16.6",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "graphql": "^16.6.0",
-    "idb-keyval": "^6.2.0",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "remeda": "^1.44.0",
     "uuid": "^9.0.0",
     "zod": "^3.22.4"
