--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:netlify-server": "netlify dev",
     "watch": "run-p dev:*",
     "dev": "run-s clean spit-graphql-schema generate-all-types watch",
-    "build": "tsc && bun spit-graphql-schema && bun generate-all-types && vite build",
+    "build": "bun spit-graphql-schema && bun generate-all-types && tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier \"src/**/*.{ts,tsx,js,jsx,css,scss}\" --write",
