--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@graphql-codegen/client-preset": "^4.2.2",
     "@graphql-codegen/introspection": "^4.0.2",
     "@graphql-codegen/typescript-apollo-client-helpers": "^3.0.0",
+    "@graphql-inspector/cli": "^4.0.3",
     "@parcel/watcher": "^2.4.0",
     "@playwright/test": "^1.41.2",
     "@tanstack/router-devtools": "^1.16.6",
