--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/joy": "^5.0.0-beta.29",
     "@nhost/react": "^3.1.0",
     "@tanstack/react-router": "^1.16.6",
