--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nhost/react": "^3.1.0",
     "@tanstack/react-router": "^1.16.6",
     "ag-grid-community": "^31.1.1",
+    "ag-grid-enterprise": "^31.1.1",
     "ag-grid-react": "^31.1.1",
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.10",
     "graphql": "^16.6.0",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
