--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
     "@mui/joy": "^5.0.0-beta.29",
+    "@netlify/functions": "^2.6.0",
     "@nhost/react": "^3.1.0",
     "@tanstack/react-router": "^1.16.6",
     "ag-grid-community": "^31.1.1",
