Add install to dev script

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "generate-all-types": "graphql-codegen --config codegen.ts",
     "dev:generate-all-types": "graphql-codegen --config codegen.ts --watch",
     "dev:vite": "vite",
+    "install-deps": "bun i",
     "dev:netlify-server": "netlify dev",
     "watch": "run-p dev:*",
-    "dev": "run-s clean spit-graphql-schema generate-all-types watch",
+    "dev": "run-s clean install-deps spit-graphql-schema generate-all-types watch",
     "build": "bun spit-graphql-schema && bun generate-all-types && tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
