--- a/package.json
+++ b/package.json
@@ -20,30 +20,32 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.4",
+    "@apollo/client": "^3.9.9",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/joy": "^5.0.0-beta.29",
     "@netlify/functions": "^2.6.0",
     "@nhost/react": "^3.1.0",
-    "@tanstack/react-router": "^1.16.6",
-    "ag-grid-community": "^31.1.1",
-    "ag-grid-enterprise": "^31.1.1",
-    "ag-grid-react": "^31.1.1",
-    "axios": "^1.6.7",
-    "classnames": "^2.3.2",
+    "@tanstack/react-router": "^1.26.0",
+    "ag-grid-community": "^31.2.0",
+    "ag-grid-enterprise": "^31.2.0",
+    "ag-grid-react": "^31.2.0",
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
-    "graphql": "^16.6.0",
-    "jotai": "^2.6.4",
+    "graphql": "^16.8.1",
+    "jotai": "^2.7.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.44.1",
+    "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "remeda": "^1.44.0",
-    "uuid": "^9.0.0",
+    "react-leaflet": "^4.2.1",
+    "remeda": "^1.56.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
     "@playwright/test": "^1.41.2",
     "@tanstack/router-devtools": "^1.16.6",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
