--- a/package.json
+++ b/package.json
@@ -20,52 +20,52 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.9",
+    "@apollo/client": "^3.10.1",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/joy": "^5.0.0-beta.29",
+    "@mui/joy": "5.0.0-beta.36",
     "@netlify/functions": "^2.6.0",
-    "@nhost/react": "^3.1.0",
-    "@tanstack/react-router": "^1.26.0",
-    "ag-grid-community": "^31.2.0",
-    "ag-grid-enterprise": "^31.2.0",
-    "ag-grid-react": "^31.2.0",
+    "@nhost/react": "^3.4.1",
+    "@tanstack/react-router": "^1.31.5",
+    "ag-grid-community": "^31.3.1",
+    "ag-grid-enterprise": "^31.3.1",
+    "ag-grid-react": "^31.3.1",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.11",
     "graphql": "^16.8.1",
-    "jotai": "^2.7.2",
+    "jotai": "^2.8.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1",
-    "remeda": "^1.56.0",
+    "remeda": "^1.61.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^5.0.2",
     "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/client-preset": "^4.2.2",
-    "@graphql-codegen/introspection": "^4.0.2",
+    "@graphql-codegen/client-preset": "^4.2.5",
+    "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript-apollo-client-helpers": "^3.0.0",
     "@graphql-inspector/cli": "^4.0.3",
     "@parcel/watcher": "^2.4.0",
     "@playwright/test": "^1.41.2",
     "@tanstack/router-devtools": "^1.16.6",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/leaflet": "^1.9.8",
-    "@types/react": "^18.2.58",
-    "@types/react-dom": "^18.2.7",
+    "@types/leaflet": "^1.9.12",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.19",
     "codegen": "^0.1.0",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -84,13 +84,13 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "tailwindcss": "^3.3.2",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.1",
-    "vite-plugin-checker": "^0.6.0",
-    "vite-plugin-restart": "^0.3.1",
-    "vitest": "^1.2.2"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-restart": "^0.4.0",
+    "vitest": "^1.5.3"
   }
 }
