Add export pdf + replace excel with csv

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@mui/joy": "5.0.0-beta.36",
     "@netlify/functions": "^2.6.0",
     "@nhost/react": "^3.4.1",
+    "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-router": "^1.31.5",
     "ag-grid-community": "^31.3.1",
     "ag-grid-enterprise": "^31.3.1",
     "ag-grid-react": "^31.3.1",
     "axios": "^1.6.8",
+    "browser-image-compression": "^2.0.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
     "graphql": "^16.8.1",
