--- a/package.json
+++ b/package.json
@@ -1,97 +1,81 @@
 {
-  "name": "adms-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "clean": "rm -rf dist",
-    "spit-graphql-schema": "bin/fetch-schema.sh",
-    "generate-all-types": "graphql-codegen --config codegen.ts",
-    "dev:generate-all-types": "graphql-codegen --config codegen.ts --watch",
-    "dev:vite": "vite",
-    "install-deps": "bun i",
-    "dev:netlify-server": "netlify dev",
-    "watch": "run-p dev:*",
-    "dev": "run-s clean install-deps spit-graphql-schema generate-all-types watch",
-    "build": "bun spit-graphql-schema && bun generate-all-types && tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier \"src/**/*.{ts,tsx,js,jsx,css,scss}\" --write",
-    "test": "vitest"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.10.1",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@hookform/resolvers": "^3.3.4",
-    "@mui/joy": "5.0.0-beta.36",
-    "@netlify/functions": "^2.6.0",
-    "@nhost/react": "^3.4.1",
-    "@react-pdf/renderer": "^3.4.4",
-    "@tanstack/react-router": "^1.31.5",
-    "ag-grid-community": "^31.3.1",
-    "ag-grid-enterprise": "^31.3.1",
-    "ag-grid-react": "^31.3.1",
-    "axios": "^1.6.8",
-    "browser-image-compression": "^2.0.2",
-    "classnames": "^2.5.1",
-    "dayjs": "^1.11.11",
-    "graphql": "^16.8.1",
-    "jotai": "^2.8.0",
-    "leaflet": "^1.9.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.3",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.0",
-    "react-leaflet": "^4.2.1",
-    "remeda": "^1.61.0",
-    "uuid": "^9.0.1",
-    "zod": "^3.23.5"
-  },
-  "devDependencies": {
-    "@graphql-codegen/add": "^5.0.2",
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/client-preset": "^4.2.5",
-    "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typescript-apollo-client-helpers": "^3.0.0",
-    "@graphql-inspector/cli": "^4.0.3",
-    "@parcel/watcher": "^2.4.0",
-    "@playwright/test": "^1.41.2",
-    "@tanstack/router-devtools": "^1.16.6",
-    "@total-typescript/ts-reset": "^0.5.1",
-    "@types/leaflet": "^1.9.12",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.19",
-    "codegen": "^0.1.0",
-    "eslint": "^8.35.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-functional": "^4.4.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "graphql-codegen-typescript-validation-schema": "^0.12.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.23",
-    "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "tailwindcss": "^3.4.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.10",
-    "vite-plugin-checker": "^0.6.4",
-    "vite-plugin-restart": "^0.4.0",
-    "vitest": "^1.5.3"
-  }
+	"name": "adms-ui",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"clean": "rm -rf dist",
+		"spit-graphql-schema": "bin/fetch-schema.sh",
+		"generate-all-types": "graphql-codegen --config codegen.ts",
+		"dev:generate-all-types": "graphql-codegen --config codegen.ts --watch",
+		"dev:vite": "vite",
+		"install-deps": "bun i",
+		"dev:netlify-server": "netlify dev",
+		"watch": "run-p dev:*",
+		"dev": "run-s clean install-deps spit-graphql-schema generate-all-types watch",
+		"build": "bun spit-graphql-schema && bun generate-all-types && tsc && vite build",
+		"preview": "vite preview",
+		"test": "vitest"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.11.9",
+		"@emotion/react": "^11.13.3",
+		"@emotion/styled": "^11.13.0",
+		"@hookform/resolvers": "^3.9.1",
+		"@mui/joy": "5.0.0-beta.48",
+		"@netlify/functions": "^2.8.2",
+		"@nhost/react": "^3.4.1",
+		"@react-pdf/renderer": "^4.0.0",
+		"@tanstack/react-router": "^1.81.1",
+		"ag-grid-community": "^31.3.4",
+		"ag-grid-enterprise": "^31.3.4",
+		"ag-grid-react": "^31.3.4",
+		"axios": "^1.7.7",
+		"browser-image-compression": "^2.0.2",
+		"classnames": "^2.5.1",
+		"dayjs": "^1.11.11",
+		"graphql": "^16.9.0",
+		"jotai": "^2.10.1",
+		"leaflet": "^1.9.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-error-boundary": "^4.1.2",
+		"react-hook-form": "^7.53.2",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^5.3.0",
+		"react-leaflet": "^4.2.1",
+		"remeda": "^2.17.0",
+		"uuid": "^11.0.2",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@graphql-codegen/add": "^5.0.3",
+		"@graphql-codegen/cli": "^5.0.3",
+		"@graphql-codegen/client-preset": "^4.5.0",
+		"@graphql-codegen/introspection": "^4.0.3",
+		"@graphql-codegen/typescript-apollo-client-helpers": "^3.0.0",
+		"@graphql-inspector/cli": "^5.0.6",
+		"@parcel/watcher": "^2.5.0",
+		"@playwright/test": "^1.48.2",
+		"@tanstack/router-devtools": "^1.81.1",
+		"@total-typescript/ts-reset": "^0.5.1",
+		"@types/leaflet": "^1.9.14",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react-swc": "^3.7.1",
+		"autoprefixer": "^10.4.20",
+		"codegen": "^0.1.0",
+		"graphql-codegen-typescript-validation-schema": "^0.17.0",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.14",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.10",
+		"vite-plugin-checker": "^0.6.4",
+		"vite-plugin-restart": "^0.4.1",
+		"vitest": "^2.1.4"
+	},
+	"trustedDependencies": ["@biomejs/biome"]
 }
